fixes iphone alignment

--- a/client/src/components/landingpage.scss
+++ b/client/src/components/landingpage.scss
@@ -680,7 +680,7 @@ a:focus {
   padding-bottom: 75px;
 
   .iphone-div {
-    align-self: center;
+    align-self: left;
   }
 
   @include media-breakpoint-down(sm) {
